--- a/destination.html
+++ b/destination.html
@@ -38,10 +38,10 @@
       <img id="image" class="conatainer__col1" src="css/assets/destination/image-moon.png" alt="moon">
       <div class="conatainer__col2">
         <menu class="nav__menu__small nav--text">
-          <li><a id="0" class="nav__menu__btn underline--small">moon</a></li>
-          <li><a id="1" class="nav__menu__btn underline--small">mars</a></li>
-          <li><a id="2" class="nav__menu__btn underline--small">europe</a></li>
-          <li><a id="3" class="nav__menu__btn underline--small">titan</a></li>
+          <li><a id="0" class="nav__menu__btn underline--small btn">moon</a></li>
+          <li><a id="1" class="nav__menu__btn underline--small btn">mars</a></li>
+          <li><a id="2" class="nav__menu__btn underline--small btn">europe</a></li>
+          <li><a id="3" class="nav__menu__btn underline--small btn">titan</a></li>
         </menu>
         <h2 id="name" class="h--2"></h2>
         <p id="description" class="body--text"></p>
